fix: unexpect change line of Muramana's Stats column on mobile

--- a/_sass/gold_efficiency/table.scss
+++ b/_sass/gold_efficiency/table.scss
@@ -156,13 +156,13 @@ $tooltip-color: #333;
 
   @media screen and (max-width: 480px) {
     .items-item {
-      width: 45%;
+      width: 43%;
     }
     .items-cost {
       width: 17%;
     }
     .items-stat {
-      width: 17%;
+      width: 19%;
     }
     .items-amount {
       width: 21%;
